--- a/admin (1).html
+++ b/admin (1).html
@@ -5,10 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Reservas registradas</title>
   <style>
-    body { font-family: Arial; padding: 20px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background-color: #f2f2f2; }
+    body {
+      background-color: #ffc0cb; /* rosa suave */
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      color: #a83256;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 20px;
+      background: #ffe6f0;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(168, 50, 86, 0.3);
+    }
+    th, td {
+      border: 1px solid #a83256;
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      background-color: #f7b8c9;
+      color: #5a1030;
+    }
   </style>
 </head>
 <body>
