--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <input type="text" id="telefono" placeholder="Teléfono" required />
     <input type="date" id="dia" required />
     <input type="time" id="hora" required />
-    <button onclick="reservar()">Reservar</button>
+    <button onclick="alert('¡Funciona!')">Reservar</button>
     <div class="mensaje" id="mensaje"></div>
   </div>
 
